force-app/main/default/objects/ppmail__SObject_Setting__mdt/ppmail__SObject_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Used to configure settings for specific sObjects. This allows to define which fields to use for email addresses.</description>
    <label>SObject Setting</label>
    <pluralLabel>SObject Settings</pluralLabel>
</CustomObject>