force-app/main/default/objects/ppmail__SObject_Setting__mdt/fields/ppmail__Active__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this sObject setting is currently active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>