force-app/main/default/objects/ppmail__SObject_Setting__mdt/fields/ppmail__Fields__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Fields__c</fullName>
    <description>A comma-separated list of fields that are relevant for this sObject. This can be used to specify which fields to use for email addresses, names, or other purposes.</description>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>