force-app/main/default/objects/ppmail__SObject_Setting__mdt/fields/ppmail__SObject__c.field-meta.xml
<CustomField>
    <fullName>ppmail__SObject__c</fullName>
    <description>The API name of the sObject that this setting applies to.</description>
    <label>SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>